<resources>
    <string name="app_name">BustedTracking</string>
    <string name="title_activity_main">Busted</string>
    <!--<string name="google_app_id">AIzaSyClt5zR72BndR4Ng4Vdfw2kMtJMFPuYIV0</string>-->

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_log_in_title">Driver Login</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_about_title">About</string>

    <string name="current_location">Get current location</string>
    <string name="about_description">This is an application that allows bus tracking activities created particularly for uniten\.
        Students who can see the current online buses on the map and  can be notified when a bus is nearby\.
    Bus Drivers have accounts that allows the application to track them as long as they are online and didn\'t logout\.
    Busted BusTracking developed by Rima Ibrahim </string>
    <!-- Strings related to Settings -->
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="string_login_btn">Login</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="string_submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">register</string>
    <string name="route_a">Route A</string>
    <string name="route_b">Route B</string>
    <string name="please_choose_your_route_type">Please Choose Your Route Type</string>


</resources>
