<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_log_in_title">
        </item>


    </group>

    <group
        android:id="@+id/nav_menu_bottom"
        android:checkableBehavior="none">

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings_title" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_about_title" />

    </group>

</menu>
