<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.meer.bustedtracking.RegisterActivity"
    tools:showIn="@layout/app_bar_register">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"

        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_alignParentStart="true"
        android:gravity="clip_horizontal">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            >


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_register_UserName"
                android:layout_alignStart="@+id/textView2"
                android:text="@string/string_email"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_register_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="53dp"
                android:layout_toEndOf="@+id/textView2"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:imeOptions="flagNoExtractUi"

                />

            <EditText
                android:id="@+id/et_register_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textVisiblePassword"
                android:imeOptions="flagNoExtractUi"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentEnd="true"
             />


            <EditText
                android:id="@+id/et_register_confirm_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textVisiblePassword"
                android:imeOptions="flagNoExtractUi"
                android:layout_alignTop="@+id/textView3"
                android:layout_toEndOf="@+id/textView2"
                android:layout_marginTop="10dp"
            />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="10dp"
                android:text="@string/string_password"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_below="@+id/textView"
                android:layout_toStartOf="@+id/et_register_Password"
                android:layout_marginTop="41dp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:text="@string/confirm_password"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_below="@+id/et_register_Password"
                android:layout_alignStart="@+id/textView2"
                android:maxWidth="40dp"
                android:layout_alignParentStart="false"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@+id/et_register_confirm_Password" />

            <EditText
                android:id="@+id/et_register_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:layout_below="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="37dp"
                android:layout_toEndOf="@+id/textView3"
                android:layout_alignStart="@+id/et_register_confirm_Password"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/first_name"
                android:id="@+id/textView4"
                android:layout_alignBottom="@+id/et_register_firstname"
                android:layout_alignEnd="@+id/textView3"
                android:layout_alignTop="@+id/et_register_firstname"
                android:layout_alignStart="@+id/textView3"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/et_register_lastname"
                android:layout_below="@+id/et_register_firstname"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:layout_alignStart="@+id/et_register_firstname"
              />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/last_name"
                android:id="@+id/textView5"
                android:layout_alignBaseline="@+id/et_register_lastname"
                android:layout_alignBottom="@+id/et_register_lastname"
                android:layout_alignStart="@+id/textView4" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnRegister"
            android:text="@string/string_submit"
            android:textSize="16sp"

            android:layout_marginTop="0dp"
            android:focusable="false" />
    </LinearLayout>



</RelativeLayout>